--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
+body {
+	background-color: white;
+	text-align: center;
+  }
 h1 {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 24px;
+	font-size: 40px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 26.4px;
+}
+h2 {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 20px;
 }
 h3 {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
